[gd_scene load_steps=2 format=3 uid="uid://c8rb3mw6f1e1w"]

[ext_resource type="Script" path="res://scripts/level_editor_menu.gd" id="1_5i7v4"]

[node name="LevelEditorMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5i7v4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1800, 900)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -500.0
offset_right = 800.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Level Editor Menu"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Back"

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Load Level"

[node name="NewLevelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "New Level"

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Delete Level"

[node name="LevelList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
